fix overlapping questions, play again button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@
       text-decoration: none;
   }
 
- .start {
+ .start, .score {
    text-align: center;
  }
 
